...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/checkboxPrice"
            android:visibility="visible">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/minPriceTil"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/minPriceEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="0"
                    android:hint="@string/min_price"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/maxPriceTil"
                android:layout_width="150dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/maxPriceEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="0"
                    android:hint="@string/max_price"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addressTil"
            android:layout_width="match_parent"
            android:layout_below="@id/priceTil"
            android:layout_marginTop="10dp"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address"
                android:hint="@string/address"
                android:padding="16dp"
                android:drawablePadding="16dp"
                android:drawableLeft="@drawable/ic_location"
                android:gravity="center_vertical"
                android:background="@android:drawable/editbox_background"/>
...
